style/style.css
body {
	/*background-color: #FDFDFD; /* our original background color */
	background-image: url('../images/background.png');
	padding-top: 70px;
}

.item-selected {
	background-color: rgba(255, 255, 255, 0.95);
	border: 2px solid black !important;
}

.navbar-custom {
	background-image: none;
	background-color: rgba(255, 255, 255, 0) !important;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	border-radius: 0em;
	-webkit-box-shadow: none;
    -moz-box-shadow: none;
    -o-box-shadow: none;
    box-shadow: none;
}

.member-table {
	margin-left: auto; 
	margin-right: auto; 
	font-size: 16px; 
	padding-bottom: 5em;
	width: 50%;
}

.member-table td {
	width: 30%;
}

.jumbotron-custom {
	background-color: rgba(255, 255, 255, 0);
	border-radius: 0em !important;
	padding-top: 10px;
}

.selected-image {
	border: 2px solid black !important;
}

.navbar .navbar-nav {
  display: inline-block;
  float: none;
  vertical-align: top;
}

.nav.navbar-nav li a {
	color: black !important;
    font-family: Helvetica, Arial, sans-serif !important;
    font-size: 16px;
}

.navbar .navbar-collapse {
  text-align: center;
}

.glyphicon-remove {
	color: red;
}

.glyphicon-ok {
	color: #00ea12;
}


.game {
	float: left;
	height: 100%;
	display: block;
}

.game.left {
	padding-left: 3%; 
	width: 25%;
	padding-bottom: 5px;
}

.game.center { 
	width: 50%;
}
 .game.right {
 	padding-top: 2%;
 	width: 25%;
 	padding-right: 3%;
 }

.centered-horizontal-list {
	width: 100%; 
	margin: 0px auto 10px; 
	padding: 0px; 
	list-style: none; 
	position: relative; 
	display: block; 
	text-align: center;
}

.centered-horizontal-list li {
	position: relative; 
	border: 0px none; 
	margin-left: 2%; 
	margin-right: 2%; 
	height: auto; 
	display: inline-block; 
	margin-bottom: 2%;
}

.centered-horizontal-list li img {
	height: 100px;
	width: auto;
}

@media only screen and (max-width: 580px) {


	/* phones */
	.game {
		float: none;
		height: auto;
		text-align: center !important;
	}

	#devlist {
		display: none;
	}

	#gameTime {

	}

	.jumbotron-custom {
		width: 90% !important;
		padding: 0px !important;
	}

	.container {
		margin: 0px;
		padding: 0px;
	}

	.centered-horizontal-list li img {
		width: 100px;
		height: auto;
	}

	.game.left, .game.right, .game.center{
		width: 100%;
		margin-left: auto;
		margin-right: auto;
		padding-left: 2%;
		padding-right: 2%;
		padding-bottom: 1%;
	}

	.game.center {
		padding-bottom: 0px;
	}

	.game.center p{
		padding-top: 0px !important;
		margin-bottom: 0px !important;
	}

	#logo-wrapper {
		width: 100% !important;
	}

	#logo {
		width: 80% !important;
		height: auto !important;
	}

	.table-year {
		display: none;
	}

	.member-table {
		width: 75%;
		padding-bottom: 3em;
		font-size: 14px;
	}

	.member-table.alumni {
		width: 60%;
	}

	.member-table.members{
		width: 70%;
	}

	.member-table td {
		width: 50% !important;
	}
}

